# CAMP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/compiler_pass/: CMakeLists.txt  Kconfig  Protection.cpp  config.h
src/runtime/: CMakeLists.txt  lib.c
src/runtime/include/: lib.h
test/basic/: CMakeLists.txt  bullet.c  cmp.c  deps.c  escape.c  fakeoob.c  loop.c  pressure.c  prime.cpp  recursive.c  safe.c  safe.cpp  uaf_ex.c  unsafe.cpp
test/cpu2006/: native.cfg  violet.cfg
test/cpu2017/: native.cfg  runall.sh  violet.cfg
test/juliet/: test.py  test_uaf.py
tools/: enable  tcmalloc_global.c  v++  vcc  vcc.py
